<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".fragments.QuotesFragment">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quotes_heading"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold|normal"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/nav_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/blue"
        android:background="@drawable/baseline_add_24"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/grey"
      android:orientation="vertical"
      android:layout_centerInParent="true">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#E6F5F5F5">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quote_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#EFF4FF"
                android:gravity="center"
                android:textSize="18sp"
                android:minHeight="150dp"
                app:layout_constraintBottom_toTopOf="@id/writer_name"
                android:textStyle="bold"
                android:text="@string/quote_text"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/writer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer_name"
                android:layout_marginTop="15dp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/quote_content"
                app:layout_constraintEnd_toEndOf="@id/quote_content"
                android:textColor="#615959"/>

            <CheckBox
                android:id="@+id/heart_checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:button="@drawable/selector_wishlist_item"
                app:layout_constraintStart_toStartOf="@id/quote_content"
                app:layout_constraintTop_toBottomOf="@id/quote_content"
                app:useMaterialThemeColors="false"/>

            <Button
                android:id="@+id/copy_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/baseline_content_copy_24"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/heart_checkbox"
                app:layout_constraintTop_toBottomOf="@id/quote_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">


       <com.google.android.material.button.MaterialButton
           android:id="@+id/prev_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/prev"
           app:cornerRadius="3dp"
           android:layout_marginTop="5dp"
           android:layout_marginStart="3dp"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/next_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/next_btn"
           app:cornerRadius="3dp"
           android:layout_alignParentEnd="true"
           android:layout_marginTop="5dp"
           android:layout_marginEnd="3dp" />
   </RelativeLayout>

  </LinearLayout>

</RelativeLayout>